@@ -1,5 +1,6 @@
 package com.HackOverflow.backend.service;
 
+import com.HackOverflow.backend.dto.CompletedTaskDTO;
 import com.HackOverflow.backend.model.Event;
 import com.HackOverflow.backend.repository.EventRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -9,7 +10,6 @@ import java.time.LocalDate;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 public class AdminDashboardService {
@@ -23,17 +23,30 @@ public class AdminDashboardService {
 
         List<Event> allEvents = eventRepository.findAll();
 
+        // Active = today
         List<Event> active = allEvents.stream()
                 .filter(event -> event.getDate().isEqual(today))
-                .collect(Collectors.toList());
+                .toList();
 
+        // Pending = future
         List<Event> pending = allEvents.stream()
                 .filter(event -> event.getDate().isAfter(today))
-                .collect(Collectors.toList());
+                .toList();
 
-        List<Event> completed = allEvents.stream()
+        // Completed = past
+        List<Event> completedEvents = allEvents.stream()
                 .filter(event -> event.getDate().isBefore(today))
-                .collect(Collectors.toList());
+                .toList();
+
+        // Convert ONLY completed events → DTO (NO entity leakage)
+        List<CompletedTaskDTO> completed = completedEvents.stream()
+        .map(e -> new CompletedTaskDTO(
+                e.getName(),
+                e.getDurationHours() != null ? e.getDurationHours().intValue() : 0,
+                "Admin",
+                e.getDate().toString()
+        ))
+        .toList();
 
         Map<String, Object> response = new HashMap<>();
 
@@ -43,6 +56,8 @@ public class AdminDashboardService {
 
         response.put("activeTasks", active);
         response.put("pendingTasks", pending);
+
+        // IMPORTANT: frontend gets DTOs only
         response.put("completedTasks", completed);
 
         return response;
